<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/colorPrimary"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:elevation="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emotionality"
            android:textColor="@color/textColor"
            android:textSize="20sp"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emotionality_tv"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/colorPrimary"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:padding="16dp"
        android:orientation="vertical"
        android:elevation="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extraversion"
            android:textColor="@color/textColor"
            android:textSize="20sp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/textColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/extraversio_tv"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/colorPrimary"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:elevation="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/openness_to_experience"
            android:textSize="20sp"
            android:textColor="@color/textColor"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/textColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/openness_tv"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/colorPrimary"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:elevation="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreeableness"
            android:textColor="@color/textColor"
            android:textSize="20sp"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/textColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/agreeableness_tv"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/colorPrimary"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:elevation="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conscientiousness"
            android:textSize="20sp"
            android:textColor="@color/textColor"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/textColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/conscientiousness_tv"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/colorPrimary"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:elevation="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/honesty_humility"
            android:textColor="@color/textColor"
            android:textSize="20sp"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/textColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/honesty_humility_tv"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>
